# ecological_journey

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  CLEANUP_SUMMARY.md  Dockerfile.api  Dockerfile.test  Dockerfile.ui  GIT_COMMIT_GUIDE.md  LICENSE  PR_READY_SUMMARY.md  README.md  TODO.txt  TODOO.txt  ZoomLevel.txt  app.py  docker-compose.prd.yaml  docker-compose.prd.yml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  fetch_videos.json  fetch_videos.py  genjwt.py  home_training.json  init_mongo.py  main.py  mongod.conf  mongodb.py  notion-tree-nested.json  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  segments.json  test_utils.py  utils.py  utils_api.py  videos.json
.github/workflows/: build-and-publish.yaml  deploy-observable.yaml  deploy.yaml  deploy.yml  docker-api.yml  mint_service_token.yml  ping_render.yaml  rebuild-search-index.yml  sync_youtube_playlists.yaml
.streamlit/: pages.json
api/app/: auth.py  auth_models.py  db.py  emailer.py  main.py  models.py  routes.py  utils_notion.py
api/app/routes/: auth.py  cliplists.py  feedback.py  notion.py  playlists.py  teams.py  users.py
api/app/utils/: utils.py
app/: auth.py  auth_models.py  db.py  main.py  models.py  routes.py
apps/: about.py  home.py  partner.py  video_reviewer.py
data/: template_clip.txt
data/clips/: -jx1j-_as-c.json  Wv1cAFUIJzw.json  Yp7P5a44RCU.json  aaQT6nn9m-o.json  hwNhOE5DRlY.json  qjsDAVGG27o.json
data/videos/: fetch_videos.json
docs/: architecture.md  code-quality-setup.md
my_api_client/: README.md  pyproject.toml
my_api_client/my_api_client/: __init__.py
observable/: README.md  observablehq.config.js  package-lock.json  package.json
observable/src/: cross-training-chord.md  example-dashboard.md  example-report.md  film-trend.md  index.md  labels-trend.md  partners-network.md
pages/: 1_Video_Archive.py  2_Partner_Profiles.py  better_layout.py
scripts/: lint.sh  migrate_add_clip_id.py  playlist_sync.py  sync_prod_to_local_mongo.sh
static/: manifest.json  partner_graph.js  service-worker.js
tests/: test_click_functionality.py  test_clipboard_tab.py  test_clipper_tab.py  test_components_integration.py  test_filmboard_tab.py  test_filmdata_tab.py  test_home_page.py  test_media_components.py  test_media_page.py  test_metaforge_tab.py  test_navigation_tab.py  test_player_controls_tab.py  test_share_dialog_tab.py  test_video_state.py
ui/: about.py  cache.py  calendar_component.py  cliplists.py  clips.py  dashboard.py  dialog_puns.py  fetch_videos.py  film.py  films.py  home.py  home_page.py  john_doe.py  log.py  main.py  main_backup.py  mainn.py  notion.py  partner.py  playcliplist.py  playlist.py  reviewer.py  utils.py  utils_api.py  utils_notion.py  video_player.py  video_state.py
ui/data/: __init__.py  crud.py  models.py
ui/film_components/: __init__.py  clipboard_tab.py  clipper_tab.py  filmboard_tab.py  filmdata_tab.py  metaforge_tab.py  navigation_tab.py  player_controls_tab.py  share_dialog_tab.py  video_state.py
ui/pages/: about.py  admin.py  cliplists.py  clips.py  custom_sub_pages.py  film.py  films.py  home.py  home_again.py  media_components.py  notion.py  partner.py  playlist.py  search.py
ui/scripts/: mint_service_token.py  playlist_sync.py  rebuild_search_index.py
ui/utils/: cache.py  data_layer.py  dialog_puns.py  fetch_videos.py  hls_player.py  notion.py  peertube_api.py  query_cache_service.py  search_index_service.py  user_context.py  utils.py  utils_api.py  utils_notion.py  video_player.py  youtube.py
(+45 files in other folders)
